Update OpenApi naming
